fix(styles): set scroll overflows for animation

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@ body,
   height: 100%;
 }
 
+html {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 body {
   background: #0f0c29;
   background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
